text align left fix

--- a/css/home.css
+++ b/css/home.css
@@ -48,5 +48,6 @@
     #about p{
         font-size: 18px;
         width: 100%;
+        text-align: left;
     }
 }
